# methylFlow_analyses

./: README  README.md  setup.sh
bscapture/: analysis.R  analysis_2.R  bscapture.R  colon.sh  copydata.sh  run_cpgmf.sh  runbscapture.sh  runmf.sh
compare_old_new_methylFlow_simulation/comp_meth_pct/: comp_meth_pct.sh  input.txt  sam.R  shortRead.txt  simPattern.txt
compare_old_new_methylFlow_simulation/coverage/: allInOneCoveragePlot.r  coverage copy.sh  coverage.sh  coveragePlot.r  run_all.sh
compare_old_new_methylFlow_simulation/cpg/: allInOneCpGPlot.r  cpg copy.sh  cpg.sh  cpgPlot.r  run_all.sh
compare_old_new_methylFlow_simulation/readLength/: allInOneReadLengthPlot.r  readLength.sh  readLengthPlot.r  run_all.sh
compelet/: compelet.sh  lambdaSensitivity.sh  mixedCompeletPlot.r  mixedPlots.r  noiseSensitivity.sh
compelet/hard-Auto/: components.tsv  cpgs.tsv  eval.txt  evalAvg.txt  match.txt  matchApp.txt  mcf.txt  methylPercentageEstimated.txt  (+7 more)
coverage/: allInOneCoveragePlot.r  coverage.sh  coveragePlot.r  mixedplots-thr.r  mixedplots.r
cpg/: allInOneCpGPlot.r  cpg.sh  cpgPlot.r  mixedplots-thr.r  mixedplots.r
readLength/: allInOneReadLengthPlot.r  mixedplots-thr.r  mixedplots.r  readLength.sh  readLengthPlot.r
sam/: B-cell.R  analysis_2.R  bam.sh  fastq2sam.sh  mixSam.sh  pool.sh  readme.docx  runSamSingleCellWgbs.sh  run_fastq2sam.sh  sam.R  sam.sh  sra2sam  wgbs-Original.sh  wgbs-cbcb.sh  wgbs.sh
simulations/: CMakeLists.txt
simulations/avgEval/: main.cpp
simulations/evaluation/: main.cpp
simulations/samEval/: CMakeLists.txt  main.cpp
(+831 files in other folders)
