CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

IF(UNIX)
  SET(INSTALL_BIN_DIR "bin" CACHE STRING "")
ELSE(UNIX)
  SET(INSTALL_BIN_DIR "." CACHE STRING "")
ENDIF(UNIX)

SET(LEMON_LIBRARIES emon)

INCLUDE_DIRECTORIES("${MF_INSTALL_DIR}/include")
LINK_DIRECTORIES("${MF_INSTALL_DIR}/lib")

IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin" AND ${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libstdc++")
ENDIF()

ADD_SUBDIRECTORY(evaluation)
ADD_SUBDIRECTORY(avgEval)
